# xwecom-hermes-plugin

./: .gitignore  LESSONS.md  PLAN.md  README.md  TASKS.md  __init__.py  adapter.py  callback.py  constants.py  media.py  message_parser.py  message_sender.py  monitor.py  plugin.yaml  policy.py  pyproject.toml  requirements.txt  state_manager.py  stream.py  template_card.py
docs/: migration-status.md  streaming-comparison-report.md
sdk/: __init__.py  client.py  types.py  ws.py
tests/: conftest.py  test_adapter_events.py  test_callback.py  test_media_uploader.py  test_message_parser.py  test_message_sender.py  test_monitor.py  test_state_manager.py  test_streaming.py  test_template_card.py  test_xwecom.py
