[project]
name = "xwecom-hermes-plugin"
version = "1.0.0"
description = "WeCom platform adapter for Hermes Agent using official Python SDK"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "crazyhulk"}]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
